[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Lantern.gd" type="Script" id=1]
[ext_resource path="res://Textures/light.png" type="Texture" id=2]
[ext_resource path="res://Textures/Test_textures/Test_Corrupt_lantern.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.7986, 54.0264 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 44.0729, 57.4322 )

[node name="Lantern" type="StaticBody2D"]
scale = Vector2( 4, 6 )
collision_layer = 4
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="SpawnPosition1" type="Node2D" parent="."]
position = Vector2( -100, -100 )

[node name="SpawnPosition2" type="Node2D" parent="."]
position = Vector2( 100, -100 )

[node name="SpawnPosition3" type="Node2D" parent="."]
position = Vector2( 100, 100 )

[node name="SpawnPosition4" type="Node2D" parent="."]
position = Vector2( -100, 100 )

[node name="LitLatternArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LitLatternArea"]
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
light_mask = 2
texture = ExtResource( 2 )
color = Color( 0.0941176, 0.831373, 0.745098, 1 )
range_item_cull_mask = 3
shadow_gradient_length = 15.0

[node name="Sprite" type="Sprite" parent="Light2D"]
texture = ExtResource( 3 )
[connection signal="area_entered" from="LitLatternArea" to="." method="_on_LitLatternArea_area_entered"]
[connection signal="area_exited" from="LitLatternArea" to="." method="_on_LitLatternArea_area_exited"]
